# ChangeLog for net-libs/gnutls
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.302 2011/04/05 00:50:07 jer Exp $

  05 Apr 2011; Jeroen Roovers <jer@gentoo.org> gnutls-2.10.5.ebuild:
  Stable for HPPA (bug #361525).

  04 Apr 2011; Thomas Kahle <tomka@gentoo.org> gnutls-2.10.5.ebuild:
  x86 stable per bug 361525

*gnutls-2.12.1 (03 Apr 2011)

  03 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +gnutls-2.12.1.ebuild:
  Version bump.

  02 Apr 2011; Christoph Mende <angelos@gentoo.org> gnutls-2.10.5.ebuild:
  Stable on amd64 wrt bug #361525

*gnutls-2.12.0-r1 (30 Mar 2011)

  30 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +gnutls-2.12.0-r1.ebuild, +files/gnutls-2.12.0-C++.patch:
  Fix compatibility with C++.

*gnutls-2.12.0 (25 Mar 2011)

  25 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +gnutls-2.12.0.ebuild:
  Version bump.

  22 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  gnutls-2.10.5.ebuild, gnutls-2.11.7.ebuild:
  Update dependencies (bug #358625).

*gnutls-2.11.7 (09 Mar 2011)

  09 Mar 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gnutls-2.10.2.ebuild, -gnutls-2.10.2-r1.ebuild, -gnutls-2.10.3.ebuild,
  -gnutls-2.11.4.ebuild, -gnutls-2.11.4-r1.ebuild, -gnutls-2.11.5.ebuild,
  +gnutls-2.11.7.ebuild:
  Version bump.

  28 Feb 2011; Brent Baude <ranger@gentoo.org> gnutls-2.10.4.ebuild:
  Marking gnutls-2.10.4 ppc64 for bug 352744

*gnutls-2.10.5 (28 Feb 2011)

  28 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -gnutls-2.8.6.ebuild, -gnutls-2.10.1.ebuild, +gnutls-2.10.5.ebuild:
  Version bump.

  22 Feb 2011; nixnut <nixnut@gentoo.org> gnutls-2.10.4.ebuild:
  ppc stable #352744

  30 Jan 2011; Raúl Porcel <armin76@gentoo.org> gnutls-2.10.4.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #352744
