@@ -8,6 +8,7 @@ DIST gnutls-2.11.6.tar.bz2 7743287 RMD160 c3d7456cce6fcb77b0182d13a7127c90113deb
 DIST gnutls-2.11.7.tar.bz2 7034000 RMD160 f0eacfa7de13ae4768853684b2d3ea16de625565 SHA1 fb7b3a3c9add9c5b40b13ed8ff8e123a7f1a7403 SHA256 1df3e0225b0e79f954dd3b2a29ca0afbd38f61e53c65f57fd8bbbbdca1c04db7
 DIST gnutls-2.12.0.tar.bz2 7142406 RMD160 c8ed7bcdb5b0db665c70f53e4f349d5e71d70460 SHA1 48f27df66c7a721c5ce2b690ab936a3c9162c40a SHA256 67fe6449e1f65cd2d8eae85f8ec3280902c1a2079a245691ed252d4117033629
 DIST gnutls-2.12.1.tar.bz2 7142761 RMD160 4fac899c69b7cd4c45c19053d120db51d6295182 SHA1 f3105e39268cb2fbb1d9480ce4bc9b6236ebac26 SHA256 f4f7552cb153c359bf54bbf7f42f64e8ee9330cd69a9d3e4f004d906879e3dd2
+DIST gnutls-2.12.2.tar.bz2 7135433 RMD160 5a44fa0bc5d19f5d5844a0b3b8378ff71bf2c3a8 SHA1 210130d50a13510987a72d7023407e324379567d SHA256 cc964ee51350449142221e7efef2d5ea60459539484538e282c3b48183ab7e43
 EBUILD gnutls-2.10.4.ebuild 2832 RMD160 441eca1d49ebb0ad5bdf970339ea11cad19d9b43 SHA1 036884641cb87a705bec76f3bbc3e74de675da77 SHA256 0a4c4c7945000ea662f4f950c2c3b54afaecf879ea16be2c6a623d92de97971a
 EBUILD gnutls-2.10.5.ebuild 2842 RMD160 20a51e7773ad9583dde2bde7d6db2da9c061d047 SHA1 981f85a76db4bfdb0b292b9b00aff46aa11a9c9b SHA256 8527625a1998bf54204009913e5d5a64c5a5b1a6a0e6bf810deb83170ec34a72
 EBUILD gnutls-2.11.6.ebuild 3120 RMD160 4ac2752ad998c57634acd16fe95f5aa445ad82b0 SHA1 18890e66365aad1f972cb79066bea0d520e127f0 SHA256 2bccd8c39c84cc90d7d4058e843c9ea00d739d25a568c8f69347280c824c7740
@@ -15,12 +16,23 @@ EBUILD gnutls-2.11.7.ebuild 3124 RMD160 dc8547e492d628de4afefae1be6f7b56914df54d
 EBUILD gnutls-2.12.0-r1.ebuild 3172 RMD160 36851ea98f86bb065c7c49c3479fb847292688c7 SHA1 60b527cf1b298c6d99094ea632523d46d0df42e2 SHA256 38bcbc18834befad8a54c1dc71eb3468c1119dde088564d52fa2a234b7ba70cd
 EBUILD gnutls-2.12.0.ebuild 3124 RMD160 5bdf263d3f0ebb7723db71e5ae5e287988f1466f SHA1 80c47717fc4c0d01fc45b02a4c994d749c34f69e SHA256 2c6f097663ffb611e1e2e86bf6542b59e03d377112ad53e8f0b944cecd91bdca
 EBUILD gnutls-2.12.1.ebuild 3124 RMD160 c052bb86875b95d8abe4bf511ece52cbd495f0e8 SHA1 d686b8c76c17257ccdfe4d46f9d39c6a4a3d2de8 SHA256 92e7d9093139fd2bcf1e23996139f36251c02afa8674fea01c492d99221456f5
-MISC ChangeLog 45036 RMD160 2071852610cd987dee631abf72d85be4e792bfd1 SHA1 3b3f75ad57c4223451b63572da7d3870fd1cd8e5 SHA256 d4fc824bee02f4c0787a9af942d0b36cf4dba5c97f6d7f5b894b96a10d8dbf08
+EBUILD gnutls-2.12.2.ebuild 3124 RMD160 5c0d6c0e796cdb6ed5bd492f439b2374f11bfc26 SHA1 f58f11b228ac5cf0f5998e5ddf3ef96174a131dc SHA256 47cd3e5ccad56f1ad541566c38745b8f254b6de58d240e7d41e55da5b1978cc8
+MISC ChangeLog 45186 RMD160 e03bf2f0ed0d424c973f0045f0ce74611fd1a73c SHA1 830bb123ec22e2e2b47295c232b58d1a6ff221ca SHA256 0d59421dc9db0a2f731e2e5a2a22d8d1e225b6923591d78ba66bf0d4ad7f29fe
 MISC metadata.xml 253 RMD160 d29cff22b196e16cfd1725a25b1e9334167d38cf SHA1 2122cdcae7f58713b95483c3da76f35dd15e8aef SHA256 98ed95679982db831ecd5feaea09ada3657c97d63a97c41aa6c894487bca5a30
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk2aZ1UACgkQVWmRsqeSphNCUACdGXeYISh6DThwrZYLUbqbV0W+
-FEUAn2RlJ6d8cxaCxBs3/nxXFFKqLEm3
-=5s9a
+iQIcBAEBAgAGBQJNn3z7AAoJENgZr6v6gHY0FEcP/3n+f2XteJbGXMJzdF3NCspf
+Vz5/BRLH/lG/b+GHQ/BHIltepxfXKJN2mwZ2SCUp1neApJZXPTdB+Qicuj1uWlHW
+6MkYwVgvu4jPFb5pTVn4CfZoROizihh+ECzkaLWa9tkCNBBZu3MQkcZtUFa1nn8z
+GnNyTUctgmtyY12bFPF6vMm64r8josdZxaYC+ZdFYb6r0kEUbKFDdgAJ+k1cpDNv
+UG4seKH4DzmJh8ktjj752mJ3OxrCWbtNv6YAMWLXngP29bdPp+SYP7kjDFvwO2do
+PkQ7VVYEGjtUs25lqKQon42GSx4NUd9tUyCOvXu3WQmcn9PDAwIXBGhfmSP7P1yr
+A2QceCin+wXMOZYNUTOjJ0Ab5n16pa+3pVPc9fvApOy+jk/CcMqrwWSksU5Jp8XU
+0LByb5DPCbJovqdiUMTvsHtvkpuJQUuWISDUziDgTJcADdP3BHAJzekdxD23vkXn
+OdwOfbwdKi/hO7jKiO+6ye3unktitool2s8Ua9tDq32CY12YvfykYHm1WpASXVLh
+9PZgIZaJl8uawpSVdq3SUMYtP1HWCcX/pQKDv7Y4zJnzwhyB71t1jE+38YDBDuVA
+RMS/ZwSU7f8Ji8bjc/4Tf9DcHjDTP9dgtAnMv6KISqTtpwMcbf3CuVNtIlv+mr2x
+9LYAdctNgmuUlqW2MoZl
+=PkNw
 -----END PGP SIGNATURE-----
