@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/gnutls
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.302 2011/04/05 00:50:07 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/gnutls/ChangeLog,v 1.303 2011/04/08 21:23:53 arfrever Exp $
+
+*gnutls-2.12.2 (08 Apr 2011)
+
+  08 Apr 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +gnutls-2.12.2.ebuild:
+  Version bump.
 
   05 Apr 2011; Jeroen Roovers <jer@gentoo.org> gnutls-2.10.5.ebuild:
   Stable for HPPA (bug #361525).
